# temple

./: CHANGELOG.md  README.md  cabal.project  flake.nix  hie.yaml  temple.cabal  temple.nix
app/: Main.hs
examples/: index.html.temple  page.html.temple  post.html.temple  some-post.html.temple
examples/builtins/: plaintext.txt.temple
examples/errors/extends-file-not-found/: a.temple
examples/errors/extends-parse-error/: a.temple  b.temple
examples/errors/extends-type-error/: b.temple
examples/errors/include-file-not-found/: a.temple
examples/errors/include-type-error/: b.temple
examples/errors/include-with-not-a-parameter/: a.temple
examples/errors/include-with-param-already-bound/: a.temple
examples/errors/include-with-type-error/: a.temple
examples/include-with/: all-bound.temple  no-bound.temple  part-bound.temple  shadow.temple
nix/: fetch  hdeps.json
notes/: 20260704-template-compiler.md
src/: Temple.hs
src/Temple/: Compiler.hs
test/Test/: TempleSpec.hs
