cabal-version:      3.0
name:               temple
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Temple
    build-depends:
        base ^>=4.20.2.0,
        bytestring,
        containers,
        mtl,
        sage,
        text >=2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable temple
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        bytestring,
        containers,
        diagnostica,
        diagnostica-sage,
        optparse-applicative,
        sage,
        temple,
        text >=2.0

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite temple-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    Test.TempleSpec
    build-tool-depends: hspec-discover:hspec-discover
    build-depends:
        base ^>=4.20.2.0,
        bytestring,
        hspec,
        sage,
        temple
    default-language: Haskell2010
